# kdeconnect-dbus

./: .gitignore  CMakeLists.txt  README.md
kdeconnect-dde/: CMakeLists.txt  devicelistwindow.h  devicemanager.cpp  devicemanager.h  devicewidget.cpp  devicewidget.h  executable_main.cpp  notificationitemdelegate.cpp  notificationitemdelegate.h
kdeconnect-qt/: CMakeLists.txt  batterywidget.cpp  batterywidget.h  devicelistwindow.cpp
libkdeconnect-qt/: CMakeLists.txt  kcdbuscommon.h  kcdevice.cpp  kcdevice.h  kcmanager.cpp  kcmanager.h  kcnotification.cpp  kcnotification.h  org.kde.kdeconnect.daemon.xml  org.kde.kdeconnect.device.notifications.notification.xml  org.kde.kdeconnect.device.xml
tests/: CMakeLists.txt  tst_devicelist.cpp
